<resources>
    <string name="app_name">Beach Guard</string>
    <string name="text_cadastro">Faça seu cadastro</string>
    <string name="signin_title">Entre com sua conta</string>
    <string name="signup_title">Junte-se a nós</string>
    <string name="password">Senha</string>
    <string name="password_conf">Confirmar senha</string>
    <string name="born_date">Data de nascimento</string>
    <string name="number">Celular</string>
    <string name="already_acc">Já tenho uma conta</string>
    <string name="name">Nome completo</string>
    <string name="delete">Excluir</string>
    <string name="email">E-mail</string>
    <string name="create_acc">Criar conta</string>
    <string name="cpf">CPF</string>
    <string name="home_screen">Início</string>
    <string name="login">Entrar</string>
    <string name="not_account_yet">Ainda não tenho uma conta</string>
    <string name="logo">logo</string>
    <string name="forgot_password">Esqueceu sua senha?</string>
    <string name="rent">Alugar</string>
    <string name="add">Adicionar</string>
    <string name="my_api_key">AIzaSyDQlZwqCA_89IOPRlBDfM7_rN6S4jTUMto</string>
    <string name="password_adv">No miníno 6 dígitos.</string>
    <string name="gmail_adv">Usar gmail obrigatóriamente.</string>
    <string name="number_adv">Ex: (xx) xxxxx–xxxx.</string>
    <string name="born_adv">Formato: dd/mm/aaaa.</string>
    <string name="cpf_adv">Ex: 222.333.444–00</string>
    <string name="back">VOLTAR</string>
    <string name="confirm">Confirmar</string>
    <string name="card_data">Informe os dados do cartão</string>
    <string name="exit">Sair</string>
    <string name="select_time">Selecione o tempo de locação</string>
    <string name="available_options">Opções disponíveis:</string>
    <string name="next">Próximo</string>
    <string name="location_confirm">Confirme sua locação</string>
    <string name="user_profile">Meu Perfil</string>
    <string name="user_cards">Meus cartões</string>
    <string name="abrir_mapa">Abrir mapa</string>
    <string name="rent_button">Alugar armário</string>
    <string name="rent_lock">Alugue o seu armário</string>
    <string name="not_near_lock">Você não está próximo ao quiosque</string>
    <string name="personal_profile">Perfil pessoal</string>
    <string name="saved_cards">Cartões cadastrados</string>
    <string name="add_card">Adicionar cartão</string>
    <string name="select_card">Selecione o cartão</string>
    <string name="adv_text">Ao realizar uma locação, será cobrado o valor do caução de uma diária, porém, caso ela não seja totalmente utilizada, haverá estorno de um valor proporcional ao período restante.</string>
    <string name="qrcode">QRCODE</string>
    <string name="your_qrcode">Seu QrCode!</string>
    <string name="adv_qrcode">Apresente ao gerente</string>
    <string name="confirm_location">Confirmar locação</string>
    <string name="Home">Home</string>
    <string name="navigation_drawer">Drawer</string>
    <string name="title_1">Ver perfil</string>
    <string name="title_2">Cartões cadastrados</string>
    <string name="title_3">Adicionar cartão</string>
    <string name="title_4">Localização atual</string>
    <string name="title_5">Abrir Mapa</string>
    <string name="sub_title">Alugue armários agora!</string>
    <string name="confirmed_location">Locação confirmada</string>
    <string name="admin_version">Admin versiøn</string>
    <string name="free_location">Liberar locação</string>
    <string name="open_locker">Abrir armário</string>
    <string name="request_aproximation_toread_nfc">Aproxime a pulseira para a leitura ser efetuada!</string>
    <string name="request_aproximation_tolink_nfc">Aproxime a pulseira para o vínculo ser efetuado!</string>
    <string name="location_info">Informações da Locação</string>
    <string name="write_infos">Gravar informações</string>
    <string name="text_qtd_people">Quantas pessoas acessarão o armário?</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="client_photo">Foto do cliente</string>
    <string name="text_pin_choose">Clique em um pin para realizar uma locação!</string>
    <string name="clients_photos">Fotos dos clientes</string>
    <string name="text_confirmation_open_momentainly">Confirmação para abrir momentaneamente</string>
    <string name="proceed">Prosseguir</string>
    <string name="take_client_photo">Tire a foto do cliente</string>
    <string name="take_photo">Tirar Foto</string>
    <string name="text_aprox_to_finalize_location">Aproxime a pulseira para finalizar a locação!</string>
    <string name="calculate_bill">Carregando total a ser pago…</string>
    <string name="text_explication_bill_count">O valor total será descontado do caução e o restante será estornado devidamente!</string>
    <string name="choose_option">Selecione uma opção</string>
    <string name="finish_location">Encerrar locação</string>
    <string name="open_momentainly">Abrir momentaneamente</string>
    <string name="continue_rent">Continuar locação</string>
</resources>