<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
    android:id="@+id/group1"
    android:checkableBehavior="single">
    <item
        android:id="@+id/itPerfil"
        android:title="@string/title_1"
        android:contentDescription="@string/title_1"

        />
    <item
        android:id="@+id/itCartoes"
        android:title="@string/title_2"
        android:contentDescription="@string/title_2"/>
    <item
        android:id="@+id/itAddCartao"
        android:title="@string/title_3"
        android:contentDescription="@string/title_3"/>
        <item
            android:id="@+id/itMapa"
            android:title="@string/title_5"
            android:contentDescription="@string/title_5"/>

        <item
            android:id="@+id/itSair"
            android:title="@string/exit"
            android:contentDescription="@string/exit"
            />
    </group>

</menu>





