<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:gravity="center_horizontal"
    android:background="@drawable/degrade_linear">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_margin="5dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/logo"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="168dp"
        tools:layout_editor_absoluteY="2dp" />

    <TextView
        android:id="@+id/tvQrcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:textColor="@color/clean_white"
        android:fontFamily="sans-serif-light"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:text="@string/your_qrcode"
         />
    <TextView
        android:id="@+id/tvGerente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textColor="@color/clean_white"
        android:fontFamily="sans-serif-light"
        android:layout_marginTop="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:text="@string/adv_qrcode"
        />

    <ImageView
        android:id="@+id/imageViewQRCode"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/qrcode" />


    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:textSize="14sp"
        android:textAlignment="center"
        android:textColor="@color/clean_white"
        android:text="@string/home_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewQRCode"
        tools:ignore="MissingConstraints"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_margin="40dp"/>

</LinearLayout>