<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gerente.QtndPessoasActivity"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:background="@drawable/degrade_linear">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="5dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/logo"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="168dp"
        tools:layout_editor_absoluteY="2dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_qtd_people"
        android:gravity="center"
        android:textSize="35sp"
        android:textColor="@color/clean_white"
        android:fontFamily="sans-serif-light"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/btnUmaPessoa"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:text="@string/_1"
            android:layout_marginEnd="5dp"
            android:fontFamily="sans-serif-light"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="@color/clean_white"
            android:backgroundTint="#1F7B8D"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnDuasPessoas"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:text="@string/_2"
            android:fontFamily="sans-serif-light"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="@color/clean_white"
            android:backgroundTint="#1F7B8D"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:fontFamily="sans-serif-light"
        android:textSize="14sp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textColor="@color/clean_white"
        android:backgroundTint="#1F7B8D"
        style="@style/Widget.AppCompat.Button.Borderless"
        />

</androidx.appcompat.widget.LinearLayoutCompat>