<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".gerente.ConfirmarBothClientesActivity"
    android:background="@drawable/degrade_linear">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="5dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/logo"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="168dp"
        tools:layout_editor_absoluteY="2dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_confirmation_open_momentainly"
        android:textSize="35sp"
        android:textColor="@color/clean_white"
        android:fontFamily="sans-serif-light"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clients_photos"
        android:textSize="20sp"
        android:fontFamily="sans-serif-light"
        android:textAlignment="center"
        android:textColor="@color/clean_white"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/client_photo"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/client_photo"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/clean_white"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/tvNumeroArmario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/clean_white"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btnProsseguir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proceed"
        android:layout_gravity="center"
        android:backgroundTint="#1F7B8D"
        android:fontFamily="sans-serif-light"
        android:textSize="14sp"
        android:textAlignment="center"
        android:textColor="@color/clean_white"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/back"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-light"
        android:textSize="14sp"
        android:textAlignment="center"
        android:textColor="@color/clean_white"
        style="@style/Widget.AppCompat.Button.Borderless"/>

</LinearLayout>