<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gerente.GerenciarArmarioActivity"
    android:padding="15dp"
    android:background="@drawable/degrade_linear">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="110dp"
        android:layout_height="110dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo"/>

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/choose_option"
        android:textColor="@color/clean_white"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <Button
        android:id="@+id/btnAbrirArmario"
        android:layout_width="200dp"
        android:layout_height="180dp"
        android:layout_margin="15dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="#1F7B8D"
        android:fontFamily="sans-serif-light"
        android:text="@string/open_momentainly"
        android:textColor="@color/clean_white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo" />

    <Button
        android:id="@+id/btnFinalizarLocacao"
        android:layout_width="200dp"
        android:layout_height="180dp"
        android:layout_margin="15dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#1F7B8D"
        android:fontFamily="sans-serif-light"
        android:text="@string/finish_location"
        android:textColor="@color/clean_white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAbrirArmario" />

    <TextView
        android:id="@+id/btnVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_margin="15dp"
        android:textSize="20sp"
        android:textColor="@color/clean_white"
        android:fontFamily="sans-serif-light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFinalizarLocacao" />
</androidx.constraintlayout.widget.ConstraintLayout>