<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cadastro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degrade_linear"
    android:orientation="vertical"
    tools:context=".gerente.ConfirmarClienteActivity"
    android:padding="15dp"
    >

<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="5dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/logo"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="168dp"
        tools:layout_editor_absoluteY="2dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_confirmation_open_momentainly"
        android:gravity="center"
        android:textSize="35sp"
        android:textColor="@color/clean_white"
        android:fontFamily="sans-serif-light"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/client_photo"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/clean_white"
        android:fontFamily="sans-serif-light"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:contentDescription="@string/client_photo"/>

    <TextView
        android:id="@+id/tvNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/clean_white"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/tvNumeroArmario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/clean_white"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btnProsseguir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proceed"
        android:gravity="center"
        android:textSize="14sp"
        android:textColor="@color/clean_white"
        android:fontFamily="sans-serif-light"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:backgroundTint="#1F7B8D"
        />

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:gravity="center"
        android:textSize="14sp"
        android:textColor="@color/clean_white"
        android:fontFamily="sans-serif-light"
        android:layout_gravity="center_horizontal"
        style="@style/Widget.AppCompat.Button.Borderless"/>

</androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>