<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cliente.MapsActivity">

    <fragment
        android:id="@+id/mapFragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@id/btnVoltar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvOrientacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_pin_choose"
        android:textSize="24sp"
        android:gravity="center"
        android:background="#1F7B8D"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/clean_white"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="#1F7B8D"
        android:fontFamily="sans-serif-light"
        style="?android:attr/buttonBarButtonStyle"
        android:textColor="@color/clean_white"/>

    <Button
        android:id="@+id/btnAlugar"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="#1F7B8D"
        android:fontFamily="sans-serif-light"
        android:text="@string/rent"
        android:textColor="@color/clean_white"
        app:layout_constraintBottom_toTopOf="@+id/btnVoltar"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible"/>
</androidx.constraintlayout.widget.ConstraintLayout>
